--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "@prisma/extension-accelerate": "^1.2.1",
     "@radix-ui/react-icons": "^1.3.2",
     "@radix-ui/themes": "^3.2.0",
+    "@tanstack/react-query": "^5.66.9",
     "axios": "^1.7.9",
     "classnames": "^2.5.1",
     "delay": "^6.0.0",
